--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,11 +7,11 @@ plugins {
 }
 
 android {
-    compileSdkVersion 32
+    compileSdkVersion 33
     defaultConfig {
         applicationId "wangdaye.com.geometricweather"
         minSdkVersion 21
-        targetSdkVersion 32
+        targetSdkVersion 33
         versionCode 30102
         versionName "3.102"
         multiDexEnabled true
@@ -64,19 +64,17 @@ android {
     }
     sourceSets{
         pub {
-            java.srcDirs = ["src/bugly", "src/amap", "src/proprietary"]
-            manifest.srcFile "proprietary/AndroidManifest.xml"
+            java.srcDirs = ["src/src_bugly", "src/src_baidu", "src/src_amap", "src/src_gplay"]
+            manifest.srcFile "manifest_pub/AndroidManifest.xml"
             jniLibs.srcDir "libs"
             jni.srcDirs = []
         }
         gplay {
-            java.srcDirs = ["src/nobugly", "src/noamap", "src/proprietary"]
-            manifest.srcFile "proprietary/AndroidManifest.xml"
-            jniLibs.srcDir "libs"
-            jni.srcDirs = []
+            java.srcDirs = ["src/src_nobugly", "src/src_nobaidu", "src/src_noamap", "src/src_nogplay"]
+            manifest.srcFile "manifest_gplay/AndroidManifest.xml"
         }
         fdroid {
-            java.srcDirs = ["src/nobugly", "src/noamap", "src/opensource"]
+            java.srcDirs = ["src/src_nobugly", "src/src_nobaidu", "src/src_noamap", "src/src_nogplay"]
         }
         test {
             java.srcDir "test"
@@ -91,9 +89,12 @@ android {
     }
     kotlinOptions {
         jvmTarget = "1.8"
+        freeCompilerArgs += [
+                '-opt-in=androidx.compose.material3.ExperimentalMaterial3Api'
+        ]
     }
     composeOptions {
-        kotlinCompilerExtensionVersion "1.0.5"
+        kotlinCompilerExtensionVersion "1.3.2"
     }
     testOptions {
         unitTests {
@@ -157,9 +158,9 @@ dependencies {
 
     // test.
     testImplementation "junit:junit:4.13.2"
-    testImplementation "androidx.test:core:1.4.0"
-    testImplementation "androidx.test:runner:1.4.0"
-    testImplementation "androidx.test:rules:1.4.0"
+    testImplementation "androidx.test:core:1.5.0"
+    testImplementation "androidx.test:runner:1.5.2"
+    testImplementation "androidx.test:rules:1.5.0"
     testImplementation "org.mockito:mockito-core:3.3.3"
     testImplementation "org.powermock:powermock-api-mockito2:2.0.9"
     testImplementation "org.powermock:powermock-module-junit4:2.0.9"
@@ -168,48 +169,48 @@ dependencies {
     testImplementation "org.robolectric:robolectric:4.3"
 
     // material design.
-    implementation "com.google.android.material:material:1.7.0-alpha02"
-    implementation "androidx.appcompat:appcompat:1.4.1"
+    implementation "com.google.android.material:material:1.9.0-alpha01"
+    implementation "androidx.appcompat:appcompat:1.6.0"
     implementation "androidx.cardview:cardview:1.0.0"
     implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0"
 
     // compose.
-    implementation "androidx.activity:activity-compose:1.4.0"
-    implementation "androidx.compose.material:material:1.1.1"
-    implementation "androidx.compose.animation:animation:1.1.1"
-    implementation "androidx.compose.ui:ui-tooling:1.1.1"
-    implementation "androidx.compose.foundation:foundation:1.2.0-beta02"
-    implementation "androidx.lifecycle:lifecycle-viewmodel-compose:2.5.0-rc01"
-    androidTestImplementation "androidx.compose.ui:ui-test-junit4:1.1.1"
+    implementation "androidx.activity:activity-compose:1.6.1"
+    implementation "androidx.compose.material:material:1.3.1"
+    implementation "androidx.compose.animation:animation:1.3.3"
+    implementation "androidx.compose.ui:ui-tooling:1.3.3"
+    implementation "androidx.compose.foundation:foundation:1.4.0-alpha04"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-compose:2.6.0-alpha04"
+    androidTestImplementation "androidx.compose.ui:ui-test-junit4:1.3.3"
     implementation "com.google.accompanist:accompanist-appcompat-theme:0.16.0"
-    implementation "androidx.compose.material3:material3:1.0.0-alpha09"
-    implementation "androidx.compose.material:material-icons-extended:1.2.0-beta02"
-    implementation "androidx.navigation:navigation-compose:2.4.2"
+    implementation "androidx.compose.material3:material3:1.1.0-alpha04"
+    implementation "androidx.compose.material:material-icons-extended:1.4.0-alpha04"
+    implementation "androidx.navigation:navigation-compose:2.5.3"
 
     // preference.
     implementation "androidx.preference:preference-ktx:1.2.0"
 
     // work.
-    implementation "androidx.core:core-ktx:1.7.0"
-    implementation "androidx.work:work-runtime:2.8.0-alpha02"
+    implementation "androidx.core:core-ktx:1.9.0"
+    implementation "androidx.work:work-runtime:2.8.0-rc01"
 
     // lifecycle.
     implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
-    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.1"
-    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.4.1"
-    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.4.1"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1"
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.5.1"
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.5.1"
     //noinspection LifecycleAnnotationProcessorWithJava8
-    annotationProcessor "androidx.lifecycle:lifecycle-compiler:2.4.1"
-    implementation "androidx.lifecycle:lifecycle-common-java8:2.4.1"
-    implementation "androidx.lifecycle:lifecycle-reactivestreams-ktx:2.4.1"
+    annotationProcessor "androidx.lifecycle:lifecycle-compiler:2.5.1"
+    implementation "androidx.lifecycle:lifecycle-common-java8:2.5.1"
+    implementation "androidx.lifecycle:lifecycle-reactivestreams-ktx:2.5.1"
 
     // multi dex.
     implementation "androidx.multidex:multidex:2.0.1"
 
     // hilt.
-    implementation "com.google.dagger:hilt-android:2.41"
-    kapt "com.google.dagger:hilt-android-compiler:2.41"
-    annotationProcessor "com.google.dagger:hilt-compiler:2.41"
+    implementation "com.google.dagger:hilt-android:2.44"
+    kapt "com.google.dagger:hilt-android-compiler:2.44"
+    annotationProcessor "com.google.dagger:hilt-compiler:2.44"
 
     implementation "androidx.hilt:hilt-work:1.0.0"
     kapt "androidx.hilt:hilt-compiler:1.0.0"
@@ -219,8 +220,8 @@ dependencies {
     pubImplementation "com.amap.api:location:5.3.1"
 
     // gms.
-    pubImplementation "com.google.android.gms:play-services-location:19.0.1"
-    gplayImplementation "com.google.android.gms:play-services-location:19.0.1"
+    pubImplementation "com.google.android.gms:play-services-location:21.0.1"
+    gplayImplementation "com.google.android.gms:play-services-location:21.0.1"
 
     // glide.
     implementation "com.github.bumptech.glide:glide:4.11.0"
@@ -245,7 +246,7 @@ dependencies {
     // implementation "androidx.datastore:datastore-preferences-rxjava2:1.0.0-alpha07"
 
     // gson.
-    implementation "com.google.code.gson:gson:2.8.6"
+    implementation "com.google.code.gson:gson:2.8.9"
 
     // cm.
     implementation "org.cyanogenmod:platform.sdk:5.0"
@@ -267,6 +268,7 @@ dependencies {
     implementation "me.jfenn:AdaptiveIconView:0.0.1"
     implementation "com.github.turing-tech:MaterialScrollBar:13.3.2"
     implementation "com.gordonwong:material-sheet-fab:1.2.1"
+    implementation "androidx.activity:activity-ktx:1.7.0-alpha03"
 
     // utils.
     implementation "com.github.XhinLiang:LunarCalendar:3.0.0"
